# tess-buccaneer

./: .gitignore  README.md  pyproject.toml
src/tess_buccaneer/: __init__.py  models.py  tpfmodel.py  utils.py
src/tess_buccaneer/data/: strap_locs.csv
tests/: test_tpfmodel.py
